changes to include pagination
